[22370] Multiple adaptations to URI FieldEditor and IVFService (C:\)